--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
-    <h1>Strona Główna</h1>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <h1>Autorzy:
+        Paweł Teodorczyk, Jan Zagórski 4PC
+    </h1>
     <div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
