--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Historia</a>
+            <a class="navbar-brand" href="index.html">Historia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Strona Główna</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index1.html">Przewrót majowy i ządy sanacji</a>
+                        <a class="nav-link" href="index1.html">Przewrót majowy i Rządy sanacji</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -95,7 +95,8 @@
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
-                    <img src="https://sites.google.com/site/iirzeczpospolitapolska/_/rsrc/1472868239007/gospodarka-ii-rzeczpospolitej/39223.jpg" />
+                    <img
+                        src="https://sites.google.com/site/iirzeczpospolitapolska/_/rsrc/1472868239007/gospodarka-ii-rzeczpospolitej/39223.jpg" />
                 </div>
                 <div class="carousel-caption d-none d-md-block text-light bg-opacity-75 bg-dark">
                     <h5>Gospodarka II Rzeczypospolitej</h5>
@@ -117,11 +118,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <h1>Autorzy:
-        Paweł Teodorczyk, Jan Zagórski 4PC
-    </h1>
-    <div>
+    <div class="w-100 h-100 mt-5">
+        <div class="d-flex justify-content-center align-items-center h-100 w-100">
+            <h1>Autorzy:
+                Paweł Teodorczyk, Jan Zagórski 4PC
+            </h1>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
