--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,7 @@
             przekroczyła 30 mln, a w 1939 r. Osiągneła 35 mln.Polska była państwem bardzo słabo zurbanizowanym.
         </div>
         <h2>Mniejszości narodowe w Rzeczypospolitej</h2>
-        <img class="rounded-5" src="http://www.polska1918-89.pl/photos/demografia-w-ii-rp,2149.jpg" height=750px weight=750px>
+        <img class="rounded-5" src="demografia-w-ii-rp,2149.jpg" height=750px weight=750px>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
