--- a/index5.html
+++ b/index5.html
@@ -88,6 +88,8 @@
                 poziomu kształcenia nauczycieli, a także rozwój szkolnictwa zawodowego
             </li>
         </ul>
+        
+        <img class="responsive-img rounded-5" src="szkola_retro_.jpg">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
