--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-xl bg-light navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Historia</a>
+            <a class="navbar-brand" href="index.html">Historia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
