--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="2000">
                 <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
-                    <img
+                    <img class="responsive-img"
                         src="https://static.zpe.gov.pl/portal/minimized/v3/M512xM2048xA/reader-files/book/PYAw9qOQc/1647515667/cover.jpg" />
                 </div>
                 <div class="carousel-caption d-none d-md-block text-light bg-opacity-75 bg-dark">
