--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
-                    <img src="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/oryginal/166-155228.jpg" />
+                    <img class="responsive-img" src="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/oryginal/166-155228.jpg" />
                 </div>
                 <div class="carousel-caption d-none d-md-block text-light bg-opacity-75 bg-dark">
                     <h5>Społeczeństwo II Rzeczypospolitej</h5>
@@ -95,7 +95,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
-                    <img
+                    <img class="responsive-img"
                         src="https://sites.google.com/site/iirzeczpospolitapolska/_/rsrc/1472868239007/gospodarka-ii-rzeczpospolitej/39223.jpg" />
                 </div>
                 <div class="carousel-caption d-none d-md-block text-light bg-opacity-75 bg-dark">
