--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="w-100 h-100 mt-5">
         <div class="d-flex justify-content-center align-items-center h-100 w-100">
             <h1>Autorzy:
-                Paweł Teodorczyk, Jan Zagórski 4PC
+                Paweł Teodorczyk, Jan Zagórski, Kuba Potocki, Mateusz Lewandowski, Marcel Woźniak 4PC
             </h1>
         </div>
     </div>
