--- a/index4.html
+++ b/index4.html
@@ -61,7 +61,7 @@
     <div class="container-fluid mt-2">
         <h1>Kultura w II Rzeczypospolitej</h1>
         <h2>Początki telewizji w Polsce</h2>
-        <div class="mb-3 fs-3">
+        <div class="mb-3 fs-4">
             II Reczypospolita była jednym z pierwszych państw, w których udało się uruchomić telewizję.
             Dzięki nadajnikowi zainstalowanemu na warszawskim wieżowcu Prudential 5 października 1938 r. nadano
             próbną audycję z występem popularnego śpiewaka Mieczysława Fogga. Wyemitowano także Barbara Radziwiłłówna z
@@ -72,28 +72,28 @@
             emisja sygnału nastąpiła w sierpniu 1939 r. Wybuch wojny zatrzymał prace nad rozwojem telewizji w Polsce.
         </div>
         <div class="row">
-            <div class="col-6 d-flex flex-column align-items-center">
-                <h2 class="mb-3">Głowy wawelskie</h2>
+            <div class="col-12 col-sm-6 d-flex flex-column align-items-center">
+                <h2 class="mb-2">Głowy wawelskie</h2>
                 <img class="responsive-img rounded-5 shadow-lg"
                     src="https://live.staticflickr.com/5602/15537010375_058d6f9ce3_b.jpg">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center">
-                <h2 class="mb-3">Autoportret, ostatni papieros skazańca</h2>
+            <div class="col-12 col-sm-6 d-flex flex-column align-items-center mt-4">
+                <h2 class="mb-2">Autoportret, ostatni papieros skazańca</h2>
                 <img class="responsive-img rounded-5 shadow-lg"
                     src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Witkacy_Autoportret_1924.jpg">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center">
-                <h2 class="mb-3">Halina Konopacka</h2>
+            <div class="col-12 col-sm-6 d-flex flex-column align-items-center mt-4">
+                <h2 class="mb-2">Halina Konopacka</h2>
                 <img class="responsive-img rounded-5 shadow-lg"
                     src="https://s1.tvp.pl/images2/a/e/f/uid_aefce7e9a5879c1c6bfc9d6fc66357411612200836442_width_960_play_0_pos_0_gs_0_height_540.jpg">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center">
-                <h2 class="mb-3">Janusz Kusociński</h2>
+            <div class="col-12 col-sm-6 d-flex flex-column align-items-center mt-4">
+                <h2 class="mb-2">Janusz Kusociński</h2>
                 <img class="responsive-img rounded-5 shadow-lg"
                     src="https://dzieje.pl/sites/default/files/styles/open_article_750x0_/public/201707/kusocinski.png?itok=WEfSk7wO">
             </div>
-            <div class="col-6 d-flex flex-column align-items-center">
-                <h2 class="mb-3">Kolarska reprezentacja Polski</h2>
+            <div class="col-12 col-sm-6 d-flex flex-column align-items-center mt-4">
+                <h2 class="mb-2">Kolarska reprezentacja Polski</h2>
                 <img class="responsive-img rounded-5 shadow-lg"
                     src="https://dzieje.pl/sites/default/files/styles/open_article_750x0_/public/201207/kolarze_igrzyska.jpg?itok=9jvNskgE">
             </div>
