--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000">
-                <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
+                <di class="bg-dark d-flex justify-content-center img-device">
                     <img class="responsive-img"
                         src="https://static.zpe.gov.pl/portal/minimized/v3/M512xM2048xA/reader-files/book/PYAw9qOQc/1647515667/cover.jpg" />
                 </div>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
+                <div class="bg-dark d-flex justify-content-center img-device">
                     <img class="responsive-img" src="https://przystanekhistoria.pl/dokumenty/zalaczniki/166/oryginal/166-155228.jpg" />
                 </div>
                 <div class="carousel-caption d-none d-md-block text-light bg-opacity-75 bg-dark">
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <div style="width: 100%; height: 600px;" class="bg-dark d-flex justify-content-center">
+                <div class="bg-dark d-flex justify-content-center img-device">
                     <img class="responsive-img"
                         src="https://sites.google.com/site/iirzeczpospolitapolska/_/rsrc/1472868239007/gospodarka-ii-rzeczpospolitej/39223.jpg" />
                 </div>
